fix links' overflow

--- a/main/css/main.css
+++ b/main/css/main.css
@@ -25,6 +25,9 @@ body {
     padding: 0;
     background-color: white;
 }
+a {
+    overflow-wrap: break-word;
+  }
 .header {
     width: 100%;
     height: 110px;
